# rigmonoids

./: CHANGELOG.md  rigmonoids.cabal
nix/: sources.json
src/: Rig.hs
