cabal-version:       >=1.10
name:                rigmonoids
version:             0.1.0.0
license-file:        LICENSE
author:              Asad Saeeduddin
maintainer:          masaeedu@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  build-depends:       base >=4.12 && <4.13
  hs-source-dirs:      src
  default-language:    Haskell2010

executable rigmonoids
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13
  hs-source-dirs:      src
  default-language:    Haskell2010
